# Boat_RC

./: README.md
Schematic_and_easyeda_project/: boat_2.eprj  controller_2.eprj
codes/: readme.md
codes/project/boat/: CMakeLists.txt  MPU_6500_functions.c  MPU_6500_functions.h  config.c  config.h  generic_functions.c  generic_functions.h  main.cpp
codes/project/controller_boat/: CMakeLists.txt  ILI9341_function.c  ILI9341_function.h  config.c  config.h  generic_functions.c  generic_functions.h  main.cpp
codes/test_code/mpu6500_spi/: CMakeLists.txt  config.c  config.h  functions.c  functions.h  macros.h  main.c
codes/test_code/test_control_brushless/: CMakeLists.txt  config.h  main.c
codes/test_code/test_data_boat/: CMakeLists.txt  config.h  main.cpp
codes/test_code/test_data_controller_boat/: CMakeLists.txt  ILI9341_function.c  ILI9341_function.h  config.h  generic_functions.c  main.cpp
codes/test_code/test_timing_boat/: CMakeLists.txt  config.h  main.cpp
codes/test_code/test_timing_controller_boat/: CMakeLists.txt  config.h  main.cpp
